<resources>
    <string name="app_name">Sieve Mobile Application</string>
    <string name="sieve_title">Sieve</string>
    <string name="ToDetails"><![CDATA[Details >]]></string>
    <string name="menu_key">&#8801;</string>
    <string name="create_task">+</string>
    <string name="date">[date]</string>
    <string name="return_home">&#60; Back</string>
    <string name="TaskName">Task Name</string>
    <string name="assignment_details">Task Details</string>
    <string name="not_important">Low Priority</string>
    <string name="moderately_important">Medium Priority</string>
    <string name="very_important">High Priority</string>
    <string name="editTask">Edit Task</string>
    <string name="beginTask">Begin &#62;</string>
    <string name="task_details">Task Details</string>
    <string name="task_title">Task Title</string>
    <string name="task_type">Task Type</string>
    <string name="habit">Habit</string>
    <string name="assignment">Assignment</string>
    <string name="project">Project</string>
    <string name="class_name">Class</string>
    <string name="priority">Priority</string>
    <string name="low_priority">Low Priority</string>
    <string name="medium_priority">Medium Priority</string>
    <string name="high_priority">High Priority</string>
    <string name="date_due">Date Due</string>
    <string name="edit_text">Edit Text</string>
    <string name="now_working">You are now working on</string>
    <string name="break_time">Time until break / VRS</string>
    <string name="see_details">See Details</string>
    <string name="x">X</string>
    <string name="check_mark">&#x2713;</string>
    <string name="adding_task">Adding Task...</string>
    <string name="name">Name</string>
    <string name="notes_details">Notes and Details</string>
    <string name="task_create">Create Task</string>
    <string name="settings">Settings</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="create_schedule">Create a Schedule</string>
    <string name="display_settings">Display Settings</string>
    <string name="other_settings">Other Settings</string>
    <string name="about">About</string>
	
    <string-array name="classes_array">
        <item>Math</item>
        <item>English</item>
        <item>Other Class</item>
    </string-array>

    <string name="TaskName">Task Name</string>
    <string name="assignment_details">Assignment Details</string>
    <string name="not_important">Not Important</string>
    <string name="moderately_important">Moderately Important</string>
    <string name="very_important">Very Important</string>
    <string name="settingsTitle">Settings</string>
    <string name="notifSettings">Notification Settings</string>
    <string name="schedCreate">Create a Schedule</string>
    <string name="dispSettings">Display Settings</string>
    <string name="otherSettings">Other Settings</string>
	
    <!--Sieve Theme Names-->
    <string name="sieveThemeDefault">Default</string>
    <string name="sieveThemeAlternative">Alternative</string>
    <string name="sieveThemeCombined">Combined</string>
    <string name="sieveThemeDark">Dark</string>
    <string name="sieveThemePastel">Pastel</string>
    <string name="sieveThemeCandy">Candy</string>
</resources>
