<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AssignmentDetails">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/TaskDetailsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Task Details"
            android:textSize="32sp" />

        <EditText
            android:id="@+id/TaskTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Task Title"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/TaskTypeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Task Type"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/Habit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Habit" />

            <CheckBox
                android:id="@+id/Assignment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Assignment" />

            <CheckBox
                android:id="@+id/Project"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Project" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/Class List Container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ClassTextNE"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-smallcaps"
                android:text="Class"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:textSize="24sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/planets_spinner"
                app:layout_constraintStart_toStartOf="parent" />

            <Spinner
                android:id="@+id/planets_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                app:layout_constraintEnd_toEndOf="@+id/NameAddText"
                app:layout_constraintStart_toEndOf="@+id/ClassTextNE"
                tools:layout_editor_absoluteY="144dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/PriorityTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Priority"
            android:textSize="24sp" />

        <LinearLayout
            android:id="@+id/PriorityContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/LowPriority"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/not_important" />

            <CheckBox
                android:id="@+id/MedPriority"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/moderately_important" />

            <CheckBox
                android:id="@+id/HighPriority"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/very_important" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/DateContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/DueDateTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Date Due"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/editText4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="date" />
        </LinearLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/NotesDetailsTitle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/notesDetails"
                android:textSize="24sp"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/NotesDetails"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:ems="10"
                android:hint="@string/notesDetails"
                android:inputType="textMultiLine"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                app:layout_constraintTop_toBottomOf="@+id/NotesDetailsTitle" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent">

                <Button
                    android:id="@+id/backButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="toHomePage"
                    android:text="@string/returnHome" />

                <Button
                    android:id="@+id/editButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="editTask"
                    android:text="@string/editTask" />

                <Button
                    android:id="@+id/beginButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="beginTask"
                    android:text="@string/beginTask" />
            </LinearLayout>
        </android.support.constraint.ConstraintLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>